# rihal-codestacker-ml

./: .dockerignore  .gitignore  DEMO_SCRIPT.md  Dockerfile  README.md  app.py  check_submission.py  pyproject.toml  requirements.txt  solution.py
.streamlit/: config.toml
dummy_data/test/: test.jsonl
dummy_data/train/: train.jsonl
llm_review/: INSTRUCTIONS.md
models/: anomaly_features.json  anomaly_model.joblib
notebooks/: eda.ipynb
scripts/: download_datasets.py  evaluate_model.py  find_best_demo.py  generate_dummy_images.py  prepare_cord.py  prepare_finditagain.py  retrain_fia_only.py  train_on_real_data.py
src/: anomaly.py  extraction.py  ocr.py  preprocessing.py  summarizer.py
tests/: test_extraction.py
